--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -21,6 +21,7 @@ metricPathPrefix: "Custom Metrics|HanaDB"
 # number of concurrent tasks
 numberOfThreads: 10
 
+#Metrics can be converted from b (bytes), to kb (kilobytes), to gb (gigabytes), to tb (terabytes). Use the convertFrom and convertTo properties for this.
 queries:
   - statement: "select * from M_DISK_USAGE where USED_SIZE >= 0"
     columns:
