--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -1,6 +1,6 @@
-# HanaDB Host/IP and port.
-host: ""
-port: ""
+# HanaDB Servers. If you have Failover Partners please concatenate them here like "<failoverserver1-host>:<failoverserver1-port>;<failoverserver2-host>:<failoverserver2-port>"
+servers:
+  - server: ""
 
 # Specify this key if Password Encryption Support is required. If not keep it empty
 # If specified, DB Password is now the encrypted passwords.
