--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 *.iml
 /src/test/resources/conf/integration-test-config.yml
 /src/test/resources/conf/integration-test-encrypted-config.yml
+.DS_Store
